# RedisGate

./: .env.example  .gitignore  .sqlxrc  CHANGELOG.md  Cargo.toml  DASHBOARD_FIXED_COMPLETE.md  DOCS_COMPLETE.md  DOCS_REORGANIZATION_SUMMARY.md  GET_API_KEY.bat  PROJECT_ORGANIZATION_COMPLETE.md  QUICK_START.bat  QUICK_START_API_KEY.bat  README.md  SCRIPTS_CLEANUP_SUMMARY.md  START.bat  START_ALL.bat  check_server.ps1  config.example.toml  config.production.toml  config.test.toml  config.toml  docker-compose.yml  env.development  fix-token.bat  fix_instance_connection.sql  login_and_get_token.bat  login_response.json  quick-rebuild.bat  quick-start.bat  quick-start.sh  register_and_login.bat  run-debug.ps1  run_server_debug.bat  start-clean.bat  start-redis.bat  start-server-3001.ps1  test_api.bat  test_auth.html  test_new_token.bat
.sqlx/: query-884733372e4d2bafe704af14d9a65b3298a83d0cfb450d3f170bc362844138b6.json  query-a4fe19c13fe457d76424ffca2dc11b55056f4260db65e9b0b95c26b1d78473cb.json  query-f739063b6cfd52a46952f52db3bb859763edb50bf1c594c8858cbec423048eaf.json
docs/: COMPLETION_SUMMARY.md  CONFIGURATION.md  DEVELOPMENT.md  FIX_401_ERROR.md  FIX_API_KEY_ID_NULLABLE.md  FIX_SIMULATION_MODE.md  IMPROVEMENT_ROADMAP.md  LOGGING_IMPLEMENTATION.md  MONITORING_GUIDE.md  NEXT_STEPS.md  PHASE2_CHECKLIST.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PRIORITY1_COMPLETE.md  PROGRESS.md  QUICK_START.md  README.md  REDIS_COMMANDS.md  STATUS.md  TESTING.md  TODAY_COMPLETION.md  TROUBLESHOOTING.md
grafana/: dashboard.json
migrations/: 20251118000001_add_quota_system.sql  20251119000001_create_instance_quotas_table.sql
prometheus/: alerts.yml  prometheus.yml
public/: api-keys.html  auto-fix-401.html  cache-buster.html  dashboard.html  dashboard.html.backup  debug.html  fix-401.html  fix-complete.html  fix.html  get-api-key.html  index.html  index.html.old  login.html  metrics-dashboard.html  session-expired.html  (+3 more)
src/: lib.rs  (+7 more)
(+37 files in other folders)
