[package]
name = "redisgate"
version = "0.1.0"
edition = "2021"

[lib]
name = "redisgate"
path = "src/lib.rs"

[[bin]]
name = "redisgate"
path = "src/main.rs"

[[bin]]
name = "test_connections"
path = "src/bin/test_connections.rs"

[[bin]]
name = "decode_token"
path = "src/bin/decode_token.rs"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "macros", "bigdecimal", "ipnetwork"] }
rust_decimal = { version = "1.0", features = ["serde-with-str"] }
bigdecimal = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"

# Authentication and security
jsonwebtoken = "9.2"
bcrypt = "0.15"
secrecy = "0.8"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"
thiserror = "1.0"



# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Config
config = "0.13"
dotenv = "0.15"
toml = "0.8"
num_cpus = "1.16"

# Kubernetes client
kube = "0.87"
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Performance
moka = { version = "0.12", features = ["future"] }
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.0"
